# cyberhunter-support-portal

./: .dockerignore  .env.example  .env.production.configured  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT_CONFIG.md  Dockerfile  GITHUB_SERVER_SETUP.md  Makefile  README.md  SESSION_REDIS_FIX.md  SETUP_CHECKLIST.md  admin_login.html  check-status.sh  configure-production.sh  cookies.txt  cyberhunter_portal_spec.md  deploy-session-fix.sh  deploy-to-server.sh  docker-compose-fixed.yml  docker-compose.yml  email-alias-setup.md  error_response.html  fix-deployment.sh  fix-docker-issues.sh  fix-github-auth.sh  fix-session-redis.sh  google-workspace-setup.md  login_page.html  manual-deploy.sh  project_structure.md  push-to-github.sh  pyproject.toml  regular_login.html  requirements.txt  response.html  run.py  server-commands.sh  setup-oauth.md  (+2 more)
.claude/: git-helper.sh  server-access.sh
app/: __init__.py  config.py  extensions.py
app/admin/: __init__.py  routes.py
app/api/v1/: __init__.py
app/auth/: __init__.py  decorators.py  local.py  mfa.py  oauth.py  routes.py
app/models/: __init__.py  admin.py  attachment.py  audit.py  company.py  settings.py  ticket.py  user.py
app/static/css/: cyber-theme.css
app/templates/: base.html  index.html  landing.html
app/templates/admin/: dashboard.html  settings.html  settings_email.html  settings_oauth.html
app/templates/auth/: admin_login.html  login.html
app/templates/errors/: 403.html  404.html  429.html  500.html
app/templates/tickets/: index.html
app/tickets/: __init__.py  routes.py
app/utils/: __init__.py  auth.py
docker/: clamd.conf  freshclam.conf  nginx.conf  supervisord.conf
docs/: DEPLOYMENT.md  QUICKSTART.md
migrations/versions/: 001_add_system_settings.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: auto-commit.sh  deploy.sh  install-github-cli.sh  setup_dev.sh  ssh-deploy.sh
